<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="accueil_aide_aujourdhui">Today</string>
    <string name="accueil_aide_jours_avec_chronograms">Days with ChronoGrams</string>
    <string name="afficher_chronogram">Display the ChronoGram</string>
    <string name="afficher_fond">Display background</string>
    <string name="afficher_les_jours">Display days</string>
    <string name="afficher_liste">Display as list</string>
    <string name="afficher_une_couleur_de_fond">Display background color</string>
    <string name="ajouter_une_periode">Add an event</string>
    <string name="an">year</string>
    <string name="aout">August</string>
    <string name="app_name">India Rose ChronoGram</string>
    <string name="avril">April</string>
    <string name="calendar_valider">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="caracteristiques">Characteristics</string>
    <string name="caracteristiques_repetition">recurrences</string>
    <string name="choisir_color">Choose a color</string>
    <string name="choisir_date">Pick a date</string>
    <string name="choisir_sonnerie">Choose a ringtone</string>
    <string name="chronogram_sauvegardee">ChronoGram sauvegardée</string>
    <string name="consulter">Consult</string>
    <string name="couleur">Color</string>
    <string name="couleur_aujourdhui">Today Color</string>
    <string name="couleur_jours">Days Colors</string>
    <string name="couleur_jours_avec_barre_de_temps">Days with ChronoGrams colors</string>
    <string name="couleurs">Colors</string>
    <string name="creer_modele">Create new pattern</string>
    <string name="creer_periode">Ceate event</string>
    <string name="creer_recurrences">Create ChronoGrams on period</string>
    <string name="dans_mes_chronograms">In my ChronoGrams</string>
    <string name="decembre">December</string>
    <string name="dessiner_fond_horloge_dynamique">Dynamic clock\'s background</string>
    <string name="dimanche">Sunday</string>
    <string name="en_tant_que_modele_de_journee">As day\'s pattern</string>
    <string name="envoyer">Send</string>
    <string name="fevrier">February</string>
    <string name="format">Format</string>
    <string name="heure_debut">Starting time</string>
    <string name="heure_fin">Ending time</string>
    <string name="indiagram">Indiagram</string>
    <string name="janvier">January</string>
    <string name="jeudi">Thursday</string>
    <string name="jour">day</string>
    <string name="jour_debut">Starting Day</string>
    <string name="jour_fin">Endind Day</string>
    <string name="juillet">July</string>
    <string name="juin">June</string>
    <string name="jusqua">Until</string>
    <string name="lundi">Monday</string>
    <string name="mai">May</string>
    <string name="mardi">Tuesday</string>
    <string name="mars">March</string>
    <string name="mercredi">Wednesday</string>
    <string name="modele_sauvegarde">Pattern saved</string>
    <string name="modifier">Modify my ChronoGrams</string>
    <string name="modifier_jours_description">Choisissez ici les jours sur pour lesquels vous voulez gérer vos ChronoGrams</string>
    <string name="modifier_l_evenement">Modify the event</string>
    <string name="mois">month</string>
    <string name="nom_du_modele">Pattern\'s name</string>
    <string name="nom_periode">Event name</string>
    <string name="non">No</string>
    <string name="novembre">November</string>
    <string name="occurences">occurrences</string>
    <string name="octobre">October</string>
    <string name="ok">OK</string>
    <string name="orientation">Screen\'s orientation</string>
    <string name="orientation_appliquee_demarrage">Screen\'s orientation will be applied on the next application\'s reboot</string>
    <string name="oui">Yes</string>
    <string name="paysage">Landscape</string>
    <string name="periodes">Periodes</string>
    <string name="personnalisation">Personnalisation</string>
    <string name="portrait">Portrait</string>
    <string name="preferences">Preferences</string>
    <string name="quitter">Quitter</string>
    <string name="repetition_jour">Choose Days</string>
    <string name="repetition_mois">Choose Month</string>
    <string name="retirer">Remove</string>
    <string name="retour">back</string>
    <string name="samedi">Saturday</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="selectionner_periodes_description">Choose periodes to be keeped on the ChronoGram</string>
    <string name="semaine">week</string>
    <string name="septembre">September</string>
    <string name="serieevent">For a number of event</string>
    <string name="spinner_prompt">TODO</string>
    <string name="supprimer_les_elements">Delete chosen elements</string>
    <string name="toujours">Always</string>
    <string name="tousans">All Years</string>
    <string name="tousjours">All days</string>
    <string name="tousjourssemaine">Days of the Week (Monday to Friday)</string>
    <string name="tousles">All</string>
    <string name="tousmois">All Month</string>
    <string name="toutessemaines">All Weeks</string>
    <string name="type_repetition">Repetition type</string>
    <string name="valider">Validate</string>
    <string name="vendredi">Friday</string>
    <string name="veuillez_indiquer_un_nom">Please choose a name</string>
</resources>